--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"name": "clang-9 - Build and debug active file",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${fileDirname}/${fileBasenameNoExtension}",
+			"program": "${fileDirname}/${fileBasenameNoExtension}.out",
 			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${fileDirname}",
