--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,16 @@
 		"stdio.h": "c",
 		"random": "c",
 		"*.tcc": "c",
-		"streambuf": "c"
+		"streambuf": "c",
+		"string.h": "c",
+		"string": "c",
+		"string_view": "c",
+		"fstream": "c",
+		"istream": "c",
+		"ostream": "c",
+		"sstream": "c",
+		"stdexcept": "c",
+		"system_error": "c",
+		"typeinfo": "c"
 	}
 }
